--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -48,6 +48,15 @@
 }
 
 @media screen and (max-width: 600px) {
+  .icon {
+    cursor: pointer;
+    height: 2rem;
+  }
+
+  h2{
+    font-size: large;
+  }
+
   #contact,
   footer {
     height: 40vh;
@@ -56,8 +65,25 @@
     height: 83vh;
     margin-bottom: 0;
   }
+  .article-container {
+    display: flex;
+    text-align: initial;
+    flex-wrap: wrap;
+    flex-direction: row;
+    gap: 0.7rem;
+    justify-content: space-around;
+  }
   article {
-    font-size: 1rem;
+    font-size: 0.8rem;
+    display: flex;
+    justify-content: center;
+    max-width: 7rem;
+  }
+  article div{
+    text-align: left;
+  }
+  .education-icon{
+    height: 4rem;
   }
   footer nav {
     height: fit-content;
@@ -99,5 +125,117 @@
   }
   .text-container {
     text-align: justify;
+  }
+
+  .education-details-container2 {
+    padding: 1.5rem;
+    flex: 1;
+    background: white;
+    border-radius: 2rem;
+    border: rgb(53, 53, 53) 0.1rem solid;
+    border-color: rgb(163, 163, 163);
+    text-align: center;
+    margin-bottom: 24px;
+    align-content: center;
+  }
+
+  .course-work {
+    padding-left: 4%;
+    text-align: left; 
+  }
+
+  .course {
+    font-weight: bold;
+    font-size: small;
+  }
+  
+  .tech {
+    font-weight: normal;
+    font-size: smaller;
+    font-style: italic;
+  }
+
+  .experience-location{
+    font-size: small;
+  }
+  .experience-details-container2 {
+    padding: 1.5rem;
+    flex: 1;
+    background: white;
+    border-radius: 2rem;
+    border: rgb(53, 53, 53) 0.1rem solid;
+    border-color: rgb(163, 163, 163);
+    text-align: left;
+    margin-bottom: 24px;
+    height: fit-content;
+  }
+  .aligned-left, .project-description{
+    display: none;
+  }
+  #projects {
+    position: relative;
+  }
+  .project-details-container {
+    justify-content: center;
+    flex-direction: row;
+  }
+  .project-about-containers {
+    gap: 1rem;
+    margin-bottom: 2rem;
+    margin-top: 2rem;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .project-details-container2 {
+    padding: 1.2rem;
+    flex: 1;
+    background: white;
+    border-radius: 2rem;
+    border: rgb(53, 53, 53) 0.1rem solid;
+    border-color: rgb(163, 163, 163);
+    text-align: center;
+    margin: 5px;
+    flex-basis: calc(40% - 10px);
+  }
+  
+  .color-container {
+    border-color: rgb(163, 163, 163);
+    background: rgb(250, 250, 250);
+  }
+  
+  .project-article-container {
+    height: 300px;
+    text-align: initial;
+    flex-wrap: wrap;
+    flex-direction: row;
+    gap: 2.2rem;
+  }
+  .project-img{
+    border-radius: 2rem;
+    width: 100%;
+    height: 100%;
+  }
+  .project-title {
+    font-size: large;
+    margin: 0.5rem 0rem;
+    color: black;
+  }
+  .message-container{
+    margin: 1rem auto;
+    padding: 1rem;
+  }
+  .contact-details{
+    display: flex;
+    margin: 1rem;
+    align-items: center;
+    gap: 0.5rem;
+  }
+  footer {
+    height: 26vh;
+    margin: 0 1rem;
+  }
+  
+  footer p {
+    text-align: center;
   }
 }
