--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ nav,
 nav {
   justify-content: space-around;
   align-items: center;
-  height: 17vh;
+  height: 15vh;
 }
 
 .nav-links {
@@ -73,8 +73,9 @@ a:hover {
 }
 
 .hamburger-menu {
-  position: relative;
+  position:relative;
   display: inline-block;
+  z-index: 10;
 }
 
 .hamburger-icon {
@@ -146,65 +147,6 @@ a:hover {
   transform: none;
 }
 
-/* SECTIONS */
-
-section {
-  padding-top: 4vh;
-  height: 96vh;
-  margin: 0 10rem;
-  box-sizing: border-box;
-  min-height: fit-content;
-}
-
-.section-container {
-  display: flex;
-}
-
-/* PROFILE SECTION */
-
-#profile {
-  display: flex;
-  justify-content: center;
-  gap: 5rem;
-  height: 80vh;
-}
-
-.section__pic-container {
-  display: flex;
-  height: 400px;
-  width: 400px;
-  margin: auto 0;
-}
-
-.section__text {
-  align-self: center;
-  text-align: center;
-}
-
-.section__text p {
-  font-weight: 600;
-}
-
-.section__text__p1 {
-  text-align: center;
-}
-
-.section__text__p2 {
-  font-size: 1.75rem;
-  margin-bottom: 1rem;
-}
-
-.title {
-  font-size: 3rem;
-  text-align: center;
-}
-
-#socials-container {
-  display: flex;
-  justify-content: center;
-  margin-top: 1rem;
-  gap: 1rem;
-}
 
 /* ICONS */
 
@@ -278,36 +220,73 @@ article .icon {
   gap: 1rem;
 }
 
-/* ABOUT SECTION */
+/* SECTIONS */
 
-#about {
-  position: relative;
+section {
+  padding-top: 4vh;
+  height: 96vh;
+  margin: 0 10rem;
+  box-sizing: border-box;
+  min-height: fit-content;
 }
 
-.about-containers {
-  gap: 2rem;
-  margin-bottom: 2rem;
-  margin-top: 2rem;
-}
-
-.about-details-container {
-  justify-content: center;
-  flex-direction: column;
-}
-
-.about-containers,
-.about-details-container {
+.section-container {
   display: flex;
 }
 
-.about-pic {
-  border-radius: 2rem;
+.section__text p {
+  font-weight: 600;
+}
+
+.section__text__p1 {
+  text-align: center;
 }
 
 .arrow {
   position: absolute;
   right: -5rem;
   bottom: 2.5rem;
+}
+
+/* PROFILE SECTION */
+
+#profile {
+  display: inline-grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 5rem;
+  position: relative;
+  align-items: center;
+  height: 84vh;
+}
+
+.about{
+  grid-column: 1;
+}
+
+.section__text {
+  text-align: center;
+}
+
+.aspiring_role {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.title {
+  font-size: 2.5rem;
+  text-align: center;
+}
+
+#socials-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  gap: 1rem;
+}
+
+.about_me{
+  grid-column: 2;
 }
 
 .details-container {
@@ -320,19 +299,89 @@ article .icon {
   text-align: center;
 }
 
-.section-container {
+.about-section-container {
   gap: 4rem;
-  height: 80%;
-}
-
-.section__pic-container {
-  height: 400px;
-  width: 400px;
-  margin: auto 0;
 }
 
 .about-description{
   text-align: justify;
+  padding-bottom: 30px;
+}
+
+/* SKillS SECTION */
+
+#skillset {
+  position: relative;
+}
+
+.skillset-sub-title {
+  color: rgb(85, 85, 85);
+  font-weight: 600;
+  font-size: 1.5rem;
+  margin-bottom: 1.5rem;
+}
+
+.skillset-details-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.skillset-containers {
+  gap: 1rem;
+  margin-bottom: 2rem;
+  margin-top: 2rem;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.skillset-details-container2 {
+  padding: 1.5rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  flex: 1;
+  background: white;
+  border-radius: 2rem;
+  border: rgb(53, 53, 53) 0.1rem solid;
+  border-color: rgb(163, 163, 163);
+  text-align: center;
+  margin: 5px;
+}
+
+@media (min-width: 768px) {
+  .skillset-details-container2 {
+    flex-basis: calc(27% - 10px);
+  }
+
+.article-container {
+  display: flex;
+  text-align: initial;
+  flex-wrap: wrap;
+  flex-direction: row;
+  gap: 0.7rem;
+  justify-content: space-around;
+}
+
+article {
+  display: -webkit-inline-box;
+  width: 9.2rem;
+  justify-content: space-around;
+  gap: 0.5rem;
+}
+
+article .icon {
+  cursor: default;
+}
+.skill-icon {
+  cursor: pointer;
+  height: 1.2rem;
+}
+.skill{
+  font-size: medium;
+}
+
+.skill-level{
+  font-size: small;
 }
 
 /* EDUCATION SECTION */
@@ -409,7 +458,6 @@ color: rgb(85, 85, 85)
 .course-work {
   padding-left: 4%;
   text-align: left; 
-  
 }
 
 .course {
@@ -424,7 +472,7 @@ color: rgb(85, 85, 85)
 
 /*EXPERIENCE SECTION */
 
-experience-section {
+#experience {
   padding-top: 4vh;
   margin: 0 10rem;
   box-sizing: border-box;
@@ -515,81 +563,7 @@ display: inline-block;
   height: 80%;
 }
 
-/* SKillS SECTION */
 
-#skillset {
-  position: relative;
-}
-
-.skillset-sub-title {
-  color: rgb(85, 85, 85);
-  font-weight: 600;
-  font-size: 1.75rem;
-  margin-bottom: 1.5rem;
-}
-
-.skillset-details-container {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-}
-
-.skillset-containers {
-  gap: 1rem;
-  margin-bottom: 2rem;
-  margin-top: 2rem;
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.skillset-details-container2 {
-  padding: 1.5rem;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  flex: 1;
-  background: white;
-  border-radius: 2rem;
-  border: rgb(53, 53, 53) 0.1rem solid;
-  border-color: rgb(163, 163, 163);
-  text-align: center;
-  margin: 5px;
-}
-
-@media (min-width: 768px) {
-  .skillset-details-container2 {
-    flex-basis: calc(27% - 10px);
-  }
-
-.article-container {
-  display: flex;
-  text-align: initial;
-  flex-wrap: wrap;
-  flex-direction: row;
-  gap: 0.7rem;
-  justify-content: space-around;
-}
-
-article {
-  display: -webkit-inline-box;
-  width: 9.2rem;
-  justify-content: space-around;
-  gap: 0.5rem;
-}
-
-article .icon {
-  cursor: default;
-}
-.skill-icon {
-  cursor: pointer;
-  height: 1.2rem;
-}
-.skill{
-  font-size: medium;
-}
-
-.skill-level{
-  font-size: small;
-}
 
 /* PROJECTS SECTION */
 
@@ -641,9 +615,18 @@ article .icon {
 }
 
 .project-title {
-  font-size: larger;
-  margin: 0.5rem;
+  font-size: large;
+  margin: 0.5rem 0rem;
   color: black;
+}
+
+.project-description{
+  padding-top: 5px;
+  padding-bottom: 5px;
+  text-align: justify;
+  font-size: small;
+  min-height: 31%;
+  display: none;
 }
 
 .project-btn {
@@ -664,18 +647,17 @@ article .icon {
   height: 70vh;
 }
 
-.contact-info-upper-container {
+.contact-details-container {
   display: flex;
   justify-content: center;
   border-radius: 2rem;
   border: rgb(53, 53, 53) 0.1rem solid;
   border-color: rgb(163, 163, 163);
-  background: (250, 250, 250);
   margin: 2rem auto;
   padding: 0.5rem;
 }
 
-.contact-info-container {
+.contact-details {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -683,16 +665,12 @@ article .icon {
   margin: 1rem;
 }
 
-.contact-info-container p {
+.contact-details p {
   font-size: larger;
 }
 
 .contact-icon {
   cursor: default;
-}
-
-.email-icon {
-  height: 2.5rem;
 }
 
 /* FOOTER SECTION */
