--- a/style.css
+++ b/style.css
@@ -386,6 +386,83 @@ article .icon {
 
 .about-description{
   text-align: justify;
+  padding-bottom: 30px;
+}
+
+/* SKillS SECTION */
+
+#skillset {
+  position: relative;
+}
+
+.skillset-sub-title {
+  color: rgb(85, 85, 85);
+  font-weight: 600;
+  font-size: 1.5rem;
+  margin-bottom: 1.5rem;
+}
+
+.skillset-details-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.skillset-containers {
+  gap: 1rem;
+  margin-bottom: 2rem;
+  margin-top: 2rem;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.skillset-details-container2 {
+  padding: 1.5rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  flex: 1;
+  background: white;
+  border-radius: 2rem;
+  border: rgb(53, 53, 53) 0.1rem solid;
+  border-color: rgb(163, 163, 163);
+  text-align: center;
+  margin: 5px;
+}
+
+@media (min-width: 768px) {
+  .skillset-details-container2 {
+    flex-basis: calc(27% - 10px);
+  }
+
+.article-container {
+  display: flex;
+  text-align: initial;
+  flex-wrap: wrap;
+  flex-direction: row;
+  gap: 0.7rem;
+  justify-content: space-around;
+}
+
+article {
+  display: -webkit-inline-box;
+  width: 9.2rem;
+  justify-content: space-around;
+  gap: 0.5rem;
+}
+
+article .icon {
+  cursor: default;
+}
+.skill-icon {
+  cursor: pointer;
+  height: 1.2rem;
+}
+.skill{
+  font-size: medium;
+}
+
+.skill-level{
+  font-size: small;
 }
 
 /* EDUCATION SECTION */
