--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -76,6 +76,7 @@
     display: flex;
     justify-content: start;
     max-width: 7rem;
+    width: 50%;
   }
   article div{
     text-align: left;
