--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -30,6 +30,12 @@
   }
 }
 
+@media screen and (max-width: 1271px) {
+  .skillset-details-container2 {
+    flex-basis: calc(30% - 10px);
+  }
+}
+
 @media screen and (max-width: 1200px) {
   #desktop-nav {
     display: none;
