Updated Education and Experience pages Updated Contact page Updated Skillset Added dynamic button on scroll

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -64,6 +64,44 @@
     height: 40vh;
   }
 
+  /* SCROLL */
+
+/* Initial hidden state */
+.scrolltop {
+  display: none; /* Initially hidden */
+  position: fixed; /* Fixed position at the bottom-right of the screen */
+  bottom: 2rem; /* Distance from the bottom */
+  right: 3rem; /* Distance from the right */
+  background-color: rgba(81, 81, 81, 0.7); /* Background color */
+  justify-content: center;
+  align-items: center;
+  color: #fff; /* Icon color */
+  padding: 5px; /* Padding for the icon */
+  border-radius: .5rem;
+  cursor: pointer; /* Changes cursor to pointer on hover */
+  z-index: 1000; /* High z-index to stay on top */
+  transition: opacity 0.3s ease-in-out; /* Smooth transition for appearance */
+}
+
+.scrolltop:hover {
+  background-color: black;
+  text-decoration: none;
+}
+
+.bx{
+  display: block !important;
+}
+
+.scrolltop__icon {
+  font-size: 2rem;
+  color: white;
+}
+
+/* Visible state */
+.scrolltop.visible {
+  display: block; /* Make the button visible */
+}
+
   #profile {
     margin-bottom: 0;
   }
@@ -133,7 +171,17 @@
   .text-container {
     text-align: justify;
   }
+  .skills__grid-image {
+    display: inline-grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-items: center;
+}
 
+.skills__img {
+    width: 4rem;
+    height: 4rem;
+    margin: 1rem;
+}
   .education-details-container2 {
     padding: 1.5rem;
     flex: 1;
@@ -190,7 +238,7 @@
     gap: 1rem;
     margin-bottom: 2rem;
     margin-top: 2rem;
-    display: flex;
+    display: grid;
     flex-wrap: wrap;
   }
   .project-details-container2 {
@@ -236,6 +284,36 @@
     margin: 1rem;
     align-items: center;
     gap: 0.5rem;
+  }
+
+  .contact__inputs {
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 1rem;
+  }
+  
+  .contact__input, .contact__button {
+    outline: none;
+    font-size: medium;
+  }
+  
+  .contact__input {
+    width: -webkit-fill-available;
+    padding: 12px;
+    border: 2px solid gray;
+    color: black;
+    border-radius: 1.2rem;
+    margin-bottom: 1rem;
+  }
+  
+  .contact::placeholder {
+    color: #786f71;
+    font-weight: 600;
+  }
+  
+  .contact__form {
+    width: auto;
+    justify-self: center;
+    margin: 2rem auto;
   }
   footer {
     height: 26vh;
