updated experience and footer css for large screens and mobile views

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -316,9 +316,15 @@
     margin: 2rem auto;
   }
   footer {
-    height: 26vh;
-    margin: 0 1rem;
+    height: 10vh;
+    background-color: black;
   }
+
+  footer-nav,
+.footer-nav-links {
+  display: none;
+}
+
   
   footer p {
     text-align: center;
