--- a/style.css
+++ b/style.css
@@ -854,8 +854,8 @@ display: inline-block;
   gap: 1rem;
   margin-bottom: 2rem;
   margin-top: 2rem;
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr)
 }
 
 .project-details-container2 {
